wire mock as a library

--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -1,4 +1,5 @@
-baseURI = http://10.81.3.107
+#baseURI = http://10.81.3.107
+baseURI = http://qa-a5ai1-23.adstreamdev.com
 web_baseURI = https://uat3.adstreamdev.com
 ds_port = 8181
 key = 57e90b748cc4eb6b721c34ce
