--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     compile 'io.rest-assured:rest-assured:3.0.1'
     compile 'io.rest-assured:json-schema-validator:3.0.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.3'
+    testCompile "com.github.tomakehurst:wiremock-standalone:2.2.1"
+
 }
 
 task testAPI (type : Test) {
