--- a/src/test/resources/qa23.properties
+++ b/src/test/resources/qa23.properties
@@ -2,4 +2,4 @@
 baseURI = http://qa-a5ai1-23.adstreamdev.com
 ds_port = 8181
 TTM_userId = 57f77c2ccb8cb03b43cea382
-BTM_userId =
+BTM_userId = 57f77c2acb8cb03b43cea36b
