--- a/src/test/resources/qa19.properties
+++ b/src/test/resources/qa19.properties
@@ -2,3 +2,4 @@ baseURI = http://qa-a5ai1-19.adstreamdev.com
 ds_port = 8181
 TTM_userId = 57ea99eb7af9be03a2189447
 BTM_userId =
+Non_traffic_userId = 57e10798cb8cb030499c6852
