--- a/src/test/resources/qa19.properties
+++ b/src/test/resources/qa19.properties
@@ -1,5 +1,5 @@
 baseURI = http://qa-a5ai1-19.adstreamdev.com
 ds_port = 8181
-TTM_userId = 57ea99eb7af9be03a2189447
-BTM_userId =
-Non_traffic_userId = 57e10798cb8cb030499c6852
+TTM_userId = 581207dc7af9be4e272f7ce0
+BTM_userId = 581207d67af9be4e272f7cc7
+Non_traffic_userId = 581207cb7af9be4e272f7c24
