Fixes after code review

--- a/src/test/resources/qa19.properties
+++ b/src/test/resources/qa19.properties
@@ -1,4 +1,6 @@
 baseURI = http://qa-a5ai1-19.adstreamdev.com
 ds_port = 8181
-TTM_userId = 57ea99eb7af9be03a2189447
-BTM_userId =
+TTM_userId = 581207dc7af9be4e272f7ce0
+BTM_userId = 581207d67af9be4e272f7cc7
+businessUnitId = 581207c87af9be4e272f7c04
+tabId = 5805f96366746a5a18208a63
