--- a/src/test/resources/qa19.properties
+++ b/src/test/resources/qa19.properties
@@ -3,7 +3,7 @@ ds_port = 8181
 TTM_userId = 581207dc7af9be4e272f7ce0
 #MBC Group HD
 BTM_userId = 581207d17af9be4e272f7c8d
-businessUnitId = 581207c87af9be4e272f7c04
+IngestId = 581207d57af9be4e272f7cbf
 tabId = 5805f96366746a5a18208a63
 Non_traffic_userId = 581207cb7af9be4e272f7c24
 dubbingMock = 5800fa9c7af9be2d19d8e3f4
