--- a/src/test/resources/qa23.properties
+++ b/src/test/resources/qa23.properties
@@ -1,6 +1,12 @@
-#baseURI = http://10.81.3.107
-baseURI = http://qa-a5ai1-23.adstreamdev.com
+#baseURI = http://qa-a5ai1-23.adstreamdev.com
+baseURI = http://10.44.127.151
+TTM_userId = 581207dc7af9be4e272f7ce0
 ds_port = 8181
-TTM_userId = 57f77c2ccb8cb03b43cea382
-BTM_userId = 57f77c2acb8cb03b43cea36b
+#MBC Group HD
+BTM_userId = 581207d17af9be4e272f7c8d
+IngestId = 581207d57af9be4e272f7cbf
+tabId = 5805f96366746a5a18208a63
+Non_traffic_userId = 581207cb7af9be4e272f7c24
 dubbingMock = 5800fa9c7af9be2d19d8e3f4
+#MBC Hub
+BTM_Hub_userId = 581207d67af9be4e272f7cc7
