--- a/src/test/resources/qa23.properties
+++ b/src/test/resources/qa23.properties
@@ -1,12 +1,24 @@
-#baseURI = http://qa-a5ai1-23.adstreamdev.com
-baseURI = http://10.44.127.151
-TTM_userId = 581207dc7af9be4e272f7ce0
+baseURI = http://qa-a5ai1-23.adstreamdev.com
 ds_port = 8181
-#MBC Group HD
-BTM_userId = 581207d17af9be4e272f7c8d
+
+#Ingest BUID details:
 IngestId = 581207d57af9be4e272f7cbf
-tabId = 5805f96366746a5a18208a63
-Non_traffic_userId = 581207cb7af9be4e272f7c24
-dubbingMock = 5800fa9c7af9be2d19d8e3f4
-#MBC Hub
+
+#Traffic manager details:
+TTM_userId = 581207dc7af9be4e272f7ce0
+TTM1_userId = 58236cb67af9be09f646e87e
+
+#Broadcaster Hub (MBC Hub) details:
 BTM_Hub_userId = 581207d67af9be4e272f7cc7
+BTM1_Hub_userId = 5818681a7af9be09fe95c1bb
+
+#Broadcaster (MBC Group HD) BUID details:
+Broadcast_BUId = 581207cf7af9be4e272f7c5e
+
+#Broadcaster details(MBC Group HD):
+BTM_userId = 581207d17af9be4e272f7c8d
+BTM1_userId = 5824922e7af9be2c314352c3
+
+Non_traffic_userId = 581207cb7af9be4e272f7c24
+
+dubbingMock = 5800fa9c7af9be2d19d8e3f4
